--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@suid/icons-material": "^0.8.1",
+        "@suid/material": "^0.18.0",
         "typescript": "^5.7.2",
         "vite": "^6.0.11",
         "vite-plugin-solid": "^2.11.2"
