--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@tanstack/router-plugin": "^1.109.2",
         "@tanstack/solid-router": "^1.110.0",
         "@tanstack/solid-router-devtools": "^1.109.2",
+        "@tanstack/solid-store": "^0.7.1",
         "mdui": "^2.1.4",
         "solid-js": "^1.9.4",
         "tailwindcss": "^4.0.6"
