--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,9 +1,14 @@
 name: Github Pages
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
+    paths:
+      - '**.ts'
+      - '**.tsx'
+      - '**.css'
+      - 'package.json'
 
 jobs:
   build:
